2019-12-21
==========
    1. Took advantage of https://nuget.org; renamed to TauCode.Extensions.

2020-10-10
==========
    1. Took advantage of Azure DevOps. Refactoring.

2020-11-14
==========
    1. Huge dev refactoring.

2021-03-01
==========
    1. Resurrection.

2021-04-17
==========
    1. Added: public static DateTimeOffset CutDateOffset(this DateTimeOffset dateTimeOffset)

2022-06-24
==========
    1. Resurrected & Reorganized.

2022-07-29
==========
    1. Release 1.3.7.
    2. Started porting to net6.0

2023-01-18
==========
    1. Starting 1.7.0 initiative
    2. Updating pipeline YAMLs