@@ -12,3 +12,4 @@
 
 2022-04-26
 ==========
+    1. ut the CollectionExtensions.AddMany method.
