@@ -1,8 +1,0 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<configuration>
-  <packageSources>
-    <clear />
-    <add key="TauCode" value="https://pkgs.dev.azure.com/taucode/ca2e297e-3880-410d-ba2c-8d76cf8832aa/_packaging/taucode-alpha/nuget/v3/index.json" />
-    <add key="NuGetOrg" value="https://api.nuget.org/v3/index.json" />
-  </packageSources>
-</configuration>
