@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2013/05/nuspec.xsd">
   <metadata>
     <id>TauCode.Extensions</id>
-    <version>1.7.1-alpha.1.2023-01-18.12-42</version>
+    <version>1.8.1-alpha.1.2023-04-06.11-02</version>
     <authors>TauCode</authors>
     <owners>TauCode</owners>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
@@ -13,7 +13,7 @@
       TauCode extensions library
     </description>
     <releaseNotes>
-      Developing release 1.7.1.
+      Developing release 1.8.1.
     </releaseNotes>
     <tags>taucode extensions</tags>
     <dependencies>
