@@ -1,9 +1,9 @@
 dotnet restore
 
-dotnet build --configuration Debug
-dotnet build --configuration Release
+dotnet build TauCode.Extensions.sln -c Debug
+dotnet build TauCode.Extensions.sln -c Release
 
-dotnet test -c Debug .\test\TauCode.Extensions.Tests\TauCode.Extensions.Tests.csproj
-dotnet test -c Release .\test\TauCode.Extensions.Tests\TauCode.Extensions.Tests.csproj
+dotnet test TauCode.Extensions.sln -c Debug
+dotnet test TauCode.Extensions.sln -c Release
 
 nuget pack nuget\TauCode.Extensions.nuspec
